fix: overflow mobile sections height

--- a/src/app.scss
+++ b/src/app.scss
@@ -21,7 +21,16 @@ a {
 
 section {
   height: 100vh;
-  scroll-snap-align: center;
+
+  @media (max-width: 738px) {
+    height: 100%;
+  }
+
+  .parallax {
+    @media (max-width: 738px) {
+      height: 100vh;
+    }
+  }
 }
 
 @mixin mobile {
