--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,7 +1,7 @@
 @import '../../app.scss';
 
 .hero {
-  height: calc(100vh - 100px);
+  height: 100vh;
   overflow: hidden;
   background: linear-gradient(180deg, #0c0c1d, #111132);
   position: relative;
